Update confirm button text

--- a/translations/en.json
+++ b/translations/en.json
@@ -687,6 +687,7 @@
     "seasonality_option_2": "Display seasonality based on iNaturalist observations near my current location (species not found near my location will have no seasonality)",
     "donate_ios": "Please visit the following link to make a donation to Seek:",
     "change_language": "Do you want to change the language?"
+    "confirm": "Confirm"
   },
   "seek_challenges": {
     "badge": "Seek badge",
