--- a/translations/hu.json
+++ b/translations/hu.json
@@ -922,6 +922,36 @@
     "november_2022_challenge_name_urban_nature": "Városi Természet Kihívás",
     "november_2022_mission_1": "Találj 4 fajt az alábbiak közül:\n\nBrassicaceae (káposztafélék) családja;\nLamiaceae (árvacsalánfélék) családja;\nPoaceaemily (perjefélék) családja;\nBlattodea (csótányok és termeszek) rendje;\nRodentia (rágcsálók) rendje;\nColumbiformes (galambalakúak) rendje;\nCorvidae (varjúfélék: varjak, szajkók, szarkák) családja;\nPasser (verebek) nemzetsége;\nAcridotheres (majnák) nemzetsége;\nGekkota (gekkók) alrendága",
     "november_2022_description_some_species_well_adapted": "Egyes fajok jól alkalmazkodtak a lakott területekhez. Még a nagyvárosokban is találkozhatunk a biodiverzitással, a járdák repedéseiben, elhagyott telkeken, kertünkben és otthonunkban (esetleg nemkívánatos látogatóként).",
-    "november_2022_action_change_location": "Módosítsd a helyszínt egy távoli városra, hogy lásd a \"közelben lévő fajok\"-at. Milyen fajok találhatók arrafelé? Van köztük olyan, amely a közeledben található fajokkal megegyező vagy hozzájuk hasonló?"
+    "november_2022_action_change_location": "Módosítsd a helyszínt egy távoli városra, hogy lásd a \"közelben lévő fajok\"-at. Milyen fajok találhatók arrafelé? Van köztük olyan, amely a közeledben található fajokkal megegyező vagy hozzájuk hasonló?",
+    "december_2022_challenge_name_decomposers": "Lebontók Kihívás"
+  },
+  "seek_2023_challenges": {
+    "january_2023_challenge_name_habitats": "Élőhelyek Kihívás",
+    "february_2023_challenge_name_climate_change": "Klímaváltozás Kihívás",
+    "february_2023_description_climate_change": "A klímaváltozás nem csak bolygónk sarkköreinek jeges világát változtatja meg. Az emelkedő hőmérséklet és az időjárás változásai arra kényszeríthetnek egyes fajokat, hogy elhagyják kényelmetlenné váló élőhelyeiket és olyan helyeken telepedjenek le, amelyek korábban nem voltak élhetőek számukra. Ez egyben azt jelenti, hogy az évszakos változások (fenológia), mint a lombhullás, rügyfakadás, virágzás ideje is megváltozik. Egyes fajok esetében ez váratlan problémákat okozhat. Mérd fel a helyi növényvilágot és figyeld meg hogyan változik. ",
+    "february_2023_action_climate_change": "Keresd meg kedvenc növényfajodat az iNaturalist weboldalon és figyeld meg a növényfenológia ábrát a taxon oldalon. Ez az ábra azokon a megfigyeléseken alapul, amelyeket a rügyek, virágok vagy termések \"megjegyzéssel\" töltöttek fel az iNaturalist-ra. Te is feltölthetsz ilyeneket, ha bejelentkezel az iNaturalist-ba.",
+    "march_2023_challenge_name_lakes_ponds": "Tavak Kihívás",
+    "april_2023_challenge_name_nature": "Természet Kihívás",
+    "april_2023_description_nature": "We are not alone on our planet! Wildlife is always around us whether we notice it or not. In our homes, gardens, towns, and cities there are hidden worlds to be discovered. Seek in and around your home, and you may be surprised by how many wild neighbours you find.",
+    "april_2023_action_nature": "Seek out plants, fungi, bugs, birds, and animals. Watch out for signs of more elusive life – scat (poo), fur, nests, tracks, and webs can all give clues to other creatures that share your home.",
+    "may_2023_challenge_name_protected_areas": "Védett területek Kihívás",
+    "may_2023_description_protected_areas": "From the deepest forest to the smallest park, we share our planet with an incredible variety of living things, each adapted to the particular environment in which they live. Seek out a local nature hotspot and see how many different types of living thing you can find. Along the way, you’ll learn what characteristics make these different groups of organisms different from each other!",
+    "june_2023_challenge_name_plant_eaters": "Növényevők Kihívás",
+    "june_2023_action": "What kinds of plants do you eat? What parts of the plant do they come from? What kinds of animals also like to eat those plants?",
+    "july_2023_challenge_name_food_web": "Tápláléklánc Kihívás",
+    "july_2023_description_plant_eaters": "Every species in a community is connected in a food web. Producers capture energy from the sun, herbivores eat plants, carnivores eat other animals, and decomposers consume dead organisms. Seek out different levels in your local web of life, and learn how each one enables other species to survive.",
+    "july_2023_action_plant_eaters": "Did you see any herbivores in action, such as a caterpillar eating a leaf or a bird eating seeds? Did you see any carnivores in action, perhaps a spider or a mantis with prey?",
+    "august_2023_challenge_name_insect": "Rovar Kihívás",
+    "august_2023_description_insect": "Insects populations are declining around our planet, partly because crops and buildings replace their habitats and are then sprayed with bug-killing pesticides. We need insect pollinators for our crops and wild plants to flourish, and many amphibians, reptiles, birds, and mammals depend on insects for food. Seek out the insects around you and show them some love!",
+    "august_2023_action_insect": "Insects have exoskeletons and can be distinguished from their arthropod relatives by their 6 legs. Where were you able to find insects? Are they at risk from habitat loss or pesticides?",
+    "september_2023_challenge_name_equinox": "Equinox Challenge",
+    "october_2023_challenge_name_migration": "Vándorlás Kihívás",
+    "october_2023_description_migration": "Millions of birds migrate from one country to another to escape cold weather and to find food. Keeping track of when wildlife migrates can help us understand how climate change is affecting the natural world. Seek birds visiting your local area and find out where else they spend their time.",
+    "october_2023_action_migration": "Birds need fuel for the long journeys they take to migrate. You can support their food needs by advocating for protected areas and the use of native trees and shrubs in landscaping that provide berries and roosts for visiting birds.",
+    "november_2023_challenge_name_trees": "Fák Kihívás",
+    "november_2023_description_trees": "Humans rely on trees and forests for clean air, food, shelter, and wood. They take in carbon from the air and lock it away in their wood or the soil. Spending time among trees makes us feel better in mind and body. We need them now even more than ever, and so do a huge number of other living things. Seek out the trees in your local area and feel the benefits for yourself!",
+    "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
+    "december_2023_challenge_name_ecology": "Ökológia Kihívás",
+    "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
   }
 }
