--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -922,6 +922,36 @@
     "november_2022_challenge_name_urban_nature": "都市自然挑戰",
     "november_2022_mission_1": "在以下項目中找到 4 種物種：\n\n十字花科（芥菜類）；\n唇形科（薄荷）；\n禾本科（草）；\n蜚蠊目（蟑螂和白蟻）；\n囓齒目（囓齒動物）；\n鴿形目（鴿和鳩）；\n鴉科（烏鴉、松鴉和喜鵲）；\n麻雀屬（麻雀）；\n八哥屬（八哥）；\n壁虎亞目（壁虎）",
     "november_2022_description_some_species_well_adapted": "有些物種完全地適應了發達地區。即使在城市中您也可以發現野生生物多樣性，像是在路面縫隙中、空地上、參觀花園時，甚至在家裡（但可能不討喜）。",
-    "november_2022_action_change_location": "更改「附近物種」的位置來搜尋離你很遠的城市。在那附近有什麼物種？其中是否有與你附近相同或相似的物種呢？"
+    "november_2022_action_change_location": "更改「附近物種」的位置來搜尋離你很遠的城市。在那附近有什麼物種？其中是否有與你附近相同或相似的物種呢？",
+    "december_2022_challenge_name_decomposers": "分解者挑戰"
+  },
+  "seek_2023_challenges": {
+    "january_2023_challenge_name_habitats": "棲息地挑戰",
+    "february_2023_challenge_name_climate_change": "氣候變化挑戰",
+    "february_2023_description_climate_change": "Climate change is not just affecting the frozen worlds at our planet’s poles. Rising temperatures and changing weather patterns can cause species to move out of habitats that become uncomfortable and into new areas. It can also mean that changes linked to seasons (known as “phenology”) such as leaf fall and flowering start to take place at different times. This may cause problems for other species that are hard to predict. Seek out your local plant life and see how your local environment may be changing.",
+    "february_2023_action_climate_change": "Look up your favorite plant on the iNaturalist website and explore the “plant phenology” graph on its taxon page. These charts come from “annotations” for flower buds, flowers, or fruits on the observations posted to iNaturalist. You can help add them by logging in on the iNaturalist website.",
+    "march_2023_challenge_name_lakes_ponds": "湖泊及池塘挑戰",
+    "april_2023_challenge_name_nature": "自然挑戰",
+    "april_2023_description_nature": "We are not alone on our planet! Wildlife is always around us whether we notice it or not. In our homes, gardens, towns, and cities there are hidden worlds to be discovered. Seek in and around your home, and you may be surprised by how many wild neighbours you find.",
+    "april_2023_action_nature": "Seek out plants, fungi, bugs, birds, and animals. Watch out for signs of more elusive life – scat (poo), fur, nests, tracks, and webs can all give clues to other creatures that share your home.",
+    "may_2023_challenge_name_protected_areas": "保護區挑戰",
+    "may_2023_description_protected_areas": "From the deepest forest to the smallest park, we share our planet with an incredible variety of living things, each adapted to the particular environment in which they live. Seek out a local nature hotspot and see how many different types of living thing you can find. Along the way, you’ll learn what characteristics make these different groups of organisms different from each other!",
+    "june_2023_challenge_name_plant_eaters": "植食者挑戰",
+    "june_2023_action": "What kinds of plants do you eat? What parts of the plant do they come from? What kinds of animals also like to eat those plants?",
+    "july_2023_challenge_name_food_web": "食物網挑戰",
+    "july_2023_description_plant_eaters": "Every species in a community is connected in a food web. Producers capture energy from the sun, herbivores eat plants, carnivores eat other animals, and decomposers consume dead organisms. Seek out different levels in your local web of life, and learn how each one enables other species to survive.",
+    "july_2023_action_plant_eaters": "Did you see any herbivores in action, such as a caterpillar eating a leaf or a bird eating seeds? Did you see any carnivores in action, perhaps a spider or a mantis with prey?",
+    "august_2023_challenge_name_insect": "昆蟲挑戰",
+    "august_2023_description_insect": "Insects populations are declining around our planet, partly because crops and buildings replace their habitats and are then sprayed with bug-killing pesticides. We need insect pollinators for our crops and wild plants to flourish, and many amphibians, reptiles, birds, and mammals depend on insects for food. Seek out the insects around you and show them some love!",
+    "august_2023_action_insect": "Insects have exoskeletons and can be distinguished from their arthropod relatives by their 6 legs. Where were you able to find insects? Are they at risk from habitat loss or pesticides?",
+    "september_2023_challenge_name_equinox": "秋分挑戰",
+    "october_2023_challenge_name_migration": "遷徙挑戰",
+    "october_2023_description_migration": "Millions of birds migrate from one country to another to escape cold weather and to find food. Keeping track of when wildlife migrates can help us understand how climate change is affecting the natural world. Seek birds visiting your local area and find out where else they spend their time.",
+    "october_2023_action_migration": "Birds need fuel for the long journeys they take to migrate. You can support their food needs by advocating for protected areas and the use of native trees and shrubs in landscaping that provide berries and roosts for visiting birds.",
+    "november_2023_challenge_name_trees": "樹木挑戰",
+    "november_2023_description_trees": "Humans rely on trees and forests for clean air, food, shelter, and wood. They take in carbon from the air and lock it away in their wood or the soil. Spending time among trees makes us feel better in mind and body. We need them now even more than ever, and so do a huge number of other living things. Seek out the trees in your local area and feel the benefits for yourself!",
+    "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
+    "december_2023_challenge_name_ecology": "生態環境挑戰",
+    "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
   }
 }
